--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "~4.13.x",
     "method-override": "^2.3.6",
     "moment": "^2.15.1",
+    "request": "^2.81.0",
     "underscore": "1.8.x"
   },
   "scripts": {
